--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: black;
+  color: white;
+  height: 100%;
 }
 
 .App-logo {
@@ -15,12 +18,12 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 5vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: start;
+  justify-content: start;
+  font-size: 12px;
   color: white;
 }
 
